--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-syntax-highlighter": "^13.5.0",
+    "brand-components": "^1.5.1",
     "link-react": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
